--- a/Polish.html
+++ b/Polish.html
@@ -23,6 +23,13 @@
   </head>
 
   <body class="main-wrapper">
+    <!-- Blik section -->
+    <section class="blik-section">
+      <h3 class="blik-head">Fat Boss now accepts blikk: deposit fast, get paid faster</h3>
+      <div class="blik-logo">
+        <img src="./images/logo/Fat-boss-online-casino-blik-logo.png" alt="Blik logo">
+      </div>
+    </section>
     <!-- Mobile Menu -->
     <header class="hamburger">
       <div class="hamburger-container">
@@ -192,7 +199,7 @@
         </h1>
         <h2 class="games-subHead">Setki ekscytujących gier do wyboru.</h2>
         <p class="games-text">
-          Szukasz najlepszych gier w branży? Nie szukaj dalej niż Fatt Boss!
+          Szukasz najlepszych gier w branży? Nie szukaj dalej niż Fat Boss!
           Mamy wszystkie twoje ulubione, od klasycznych automatów i gier
           stołowych po najnowsze premiery. Z najlepiej ocenianą grafiką i płynną
           rozgrywką poczujesz się jak w samym środku akcji. Plus, z nowymi grami
@@ -290,15 +297,15 @@
             dowolnym urządzeniu.
           </h2>
           <p class="devices-para">
-            W Fatt Boss rozumiemy, że gracze chcą mieć elastyczność, by grać w
+            W Fat Boss rozumiemy, że gracze chcą mieć elastyczność, by grać w
             dowolnym miejscu. W rezultacie oferujemy całkowicie responsywną
             witrynę mobilną, dzięki czemu możesz grać w swoje ulubione gry z
             dowolnego urządzenia, w dowolnym miejscu. Dzięki łatwej nawigacji i
             intuicyjnym sterowaniom będziesz mógł szybko rozpocząć grę. W
             rezultacie nasza witryna mobilna jest tak samo bezpieczna jak wersja
             desktopowa, dzięki czemu możesz grać z pewnością. Niezależnie od
-            tego, czy wolisz grać na telefonie, tablecie czy laptopie, Fatt Boss
-            cię objął. Dlatego spróbuj dziś i zobacz, dlaczego Fatt Boss jest
+            tego, czy wolisz grać na telefonie, tablecie czy laptopie, Fat Boss
+            cię objął. Dlatego spróbuj dziś i zobacz, dlaczego Fat Boss jest
             najlepszym wyborem dla gier mobilnych! W ten sposób możesz cieszyć
             się wygodą gry w dowolnym miejscu z poczuciem bezpieczeństwa i
             niezawodności gry.
@@ -341,7 +348,7 @@
                 />
               </div>
               <p class="review-para">
-                "Jestem graczem Fatt Boss od ponad roku i miałem tylko pozytywne
+                "Jestem graczem Fat Boss od ponad roku i miałem tylko pozytywne
                 doświadczenia. Gry są świetne, a obsługa klienta zawsze jest
                 dostępna, aby pomóc w razie jakichkolwiek problemów. Gorąco
                 polecam!"
@@ -367,7 +374,7 @@
                 />
               </div>
               <p class="review-para">
-                "Jestem graczem Fatt Boss od ponad roku i miałem tylko pozytywne
+                "Jestem graczem Fat Boss od ponad roku i miałem tylko pozytywne
                 doświadczenia. Gry są świetne, a obsługa klienta zawsze jest
                 dostępna, aby pomóc w razie jakichkolwiek problemów. Gorąco
                 polecam!"
@@ -395,9 +402,9 @@
                 />
               </div>
               <p class="review-para">
-                "Jestem graczem Fatt Boss od kilku miesięcy i zawsze jestem
+                "Jestem graczem Fat Boss od kilku miesięcy i zawsze jestem
                 zachwycony jakością ich gier i obsługi klienta. Gorąco polecam
-                Fatt Bossa za przyjemne i niezawodne doświadczenie z grami."
+                Fat Bossa za przyjemne i niezawodne doświadczenie z grami."
               </p>
             </div>
             <div class="review-wrap">
@@ -420,7 +427,7 @@
                 />
               </div>
               <p class="review-para">
-                "Jako doświadczony gracz wiem, kiedy widzę dobrą stronę. Fatt
+                "Jako doświadczony gracz wiem, kiedy widzę dobrą stronę. Fat
                 Boss przekroczył wszystkie moje oczekiwania - gry są zabawne, a
                 wypłaty są szybkie. A+ we wszystkich aspektach!
               </p>
@@ -441,7 +448,7 @@
             Fat Boss
           </h2>
           <p class="payment-para">
-            W Fatt Boss oferujemy szeroką gamę metod płatności, aby dostosować
+            W Fat Boss oferujemy szeroką gamę metod płatności, aby dostosować
             się do Twoich potrzeb dotyczących gry w kasynie online. Ponadto
             łatwo możesz dokonywać wpłat i wypłat, aby jak najszybciej wrócić do
             gry. Czy wolisz tradycyjne opcje, takie jak Visa i Mastercard, czy
